--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ prefect = "^2.11.5"
 prefect-gcp = {extras = ["cloud-storage"], version = "^0.4.5"}
 jupyterlab = "^4.0.5"
 openpyxl = "^3.1.2"
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core"]
