--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ prefect-gcp = {extras = ["cloud-storage"], version = "^0.4.5"}
 jupyterlab = "^4.0.5"
 openpyxl = "^3.1.2"
 toml = "^0.10.2"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
