--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ jupyterlab = "^4.0.5"
 openpyxl = "^3.1.2"
 toml = "^0.10.2"
 python-dotenv = "^1.0.0"
+fastapi = "^0.103.0"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
 
 [build-system]
 requires = ["poetry-core"]
