--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ toml = "^0.10.2"
 python-dotenv = "^1.0.0"
 fastapi = "^0.103.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+html5lib = "^1.1"
 
 [build-system]
 requires = ["poetry-core"]
